# telecomms-fraud-detection-ml

./: LICENSE  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py  test_pipeline.py  test_weekly_training.py
config/: config.yaml
data/processed/: unified_data.csv
data/raw/: sample_customers_fraud.csv
docs/: weekly-training-workflow.md
models/: model.pkl  test_training_report.json
scripts/: comprehensive_demo.py  evaluate_model.py  predict_fraud.py  train_unified_fraud_model.py
telecoms_fraud_detection_ml/: __init__.py
telecoms_fraud_detection_ml/data/: __init__.py  processor.py  unifier.py  validator.py
telecoms_fraud_detection_ml/features/: __init__.py  engineer.py  selector.py  transformer.py
telecoms_fraud_detection_ml/models/: __init__.py  evaluator.py  fraud_detector.py  trainer.py
telecoms_fraud_detection_ml/utils/: __init__.py  config.py  date_utils.py  helpers.py  logger.py
tests/: test_basic.py
